[gd_scene load_steps=25 format=2]

[ext_resource path="res://GameScene.gd" type="Script" id=1]
[ext_resource path="res://Video/jinglecatswebm.webm" type="VideoStream" id=2]
[ext_resource path="res://Images/cropped-evil-ben.png" type="Texture" id=3]
[ext_resource path="res://Images/YOGSCASTBen.png" type="Texture" id=4]
[ext_resource path="res://Images/YOGSCASTBen_Mouth.png" type="Texture" id=5]
[ext_resource path="res://Images/SharkyBen.png" type="Texture" id=6]
[ext_resource path="res://festive_theme.tres" type="Theme" id=7]
[ext_resource path="res://game_font.tres" type="DynamicFont" id=8]
[ext_resource path="res://Score.gd" type="Script" id=9]
[ext_resource path="res://Combo.gd" type="Script" id=10]
[ext_resource path="res://Bars/NoteBars.tscn" type="PackedScene" id=11]
[ext_resource path="res://ResultPanel.gd" type="Script" id=12]
[ext_resource path="res://Beyond Wonderland.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://SceneTransitionButton.gd" type="Script" id=14]
[ext_resource path="res://GameSceneAudioStreamPlayer.gd" type="Script" id=15]
[ext_resource path="res://Blaghs/DBottom-Long.wav" type="AudioStream" id=16]
[ext_resource path="res://OtherAudio/youredoinggreatdad.wav" type="AudioStream" id=17]
[ext_resource path="res://OtherAudio/beans.wav" type="AudioStream" id=18]

[sub_resource type="Animation" id=6]
resource_name = "bounce_shark"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("SharkyBen:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 660, 344 ), Vector2( 660, 340 ), Vector2( 660, 346 ), Vector2( 660, 344 ), Vector2( 660, 340 ), Vector2( 660, 344 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SharkyBen:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=4]
resource_name = "evil_ben"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("cropped-evil-ben:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("cropped-evil-ben:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -10.0, 10.0, 0.0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "fade_out"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "mouth_ben"
tracks/0/type = "value"
tracks/0/path = NodePath("YOGSCASTBen:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YOGSCASTBen_Mouth:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.294118, 0.67451, 0.839216, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 13 )

[node name="GameScene" type="Node2D"]
script = ExtResource( 1 )

[node name="VideoPlayer" type="VideoPlayer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
stream = ExtResource( 2 )
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="VideoPlayer"]
anims/bounce_shark = SubResource( 6 )
anims/evil_ben = SubResource( 4 )
anims/fade_out = SubResource( 1 )
anims/mouth_ben = SubResource( 5 )

[node name="cropped-evil-ben" type="Sprite" parent="VideoPlayer"]
visible = false
position = Vector2( 960, 352 )
texture = ExtResource( 3 )

[node name="YOGSCASTBen" type="Sprite" parent="VideoPlayer"]
visible = false
position = Vector2( 418, 448 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )

[node name="YOGSCASTBen_Mouth" type="Sprite" parent="VideoPlayer"]
visible = false
position = Vector2( 418, 448 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )

[node name="SharkyBen" type="Sprite" parent="VideoPlayer"]
visible = false
position = Vector2( 660, 344 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1280.0
margin_bottom = 720.0
theme = ExtResource( 7 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Difficulty" type="Label" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -147.0
margin_top = 4.0
margin_right = -8.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.886275, 0.0745098, 0.313726, 1 )
text = "Hard"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
margin_right = 214.0
margin_bottom = 148.0

[node name="Score" type="Label" parent="UI/VBoxContainer"]
margin_right = 214.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 8 )
text = "Score: 0"
align = 1
script = ExtResource( 9 )

[node name="Combo" type="Label" parent="UI/VBoxContainer"]
margin_top = 76.0
margin_right = 214.0
margin_bottom = 148.0
custom_fonts/font = ExtResource( 8 )
text = "Combo: 0"
align = 1
script = ExtResource( 10 )

[node name="Panel" type="Panel" parent="UI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -640.0
margin_top = -180.0
margin_right = 640.0
theme = ExtResource( 7 )

[node name="Press Keys" type="Label" parent="UI/Panel"]
margin_left = 38.0
margin_top = -6.0
margin_right = 110.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "Keys:"
align = 1

[node name="NoteBars" parent="UI/Panel" instance=ExtResource( 11 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 38.5
margin_right = 72.0
margin_bottom = 38.5

[node name="ResultPanel" type="Panel" parent="UI"]
visible = false
margin_left = 450.0
margin_top = 120.0
margin_right = 810.0
margin_bottom = 420.0
custom_styles/panel = SubResource( 3 )
script = ExtResource( 12 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ResultPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10

[node name="ResultText" type="Label" parent="UI/ResultPanel/VBoxContainer"]
margin_right = 360.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.886275, 0.0745098, 0.313726, 1 )
text = "Oof not great"
align = 1

[node name="ScoreText" type="Label" parent="UI/ResultPanel/VBoxContainer"]
margin_top = 82.0
margin_right = 360.0
margin_bottom = 122.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Score: 1/20"
align = 1

[node name="ComboText" type="Label" parent="UI/ResultPanel/VBoxContainer"]
margin_top = 132.0
margin_right = 360.0
margin_bottom = 172.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Best Combo: 5"
align = 1

[node name="Restart" type="Button" parent="UI/ResultPanel/VBoxContainer"]
margin_left = 20.0
margin_top = 182.0
margin_right = 340.0
margin_bottom = 222.0
text = "Restart"
script = ExtResource( 14 )
scene_to_transition_to = "res://GameScene.tscn"

[node name="BlaghButton" type="Button" parent="UI/ResultPanel/VBoxContainer"]
margin_left = 20.0
margin_top = 232.0
margin_right = 340.0
margin_bottom = 272.0
text = "Blagh"

[node name="GameLengthTimer" type="Timer" parent="."]
wait_time = 65.0
autostart = true

[node name="GameSceneAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -3.0
script = ExtResource( 15 )
BlaghSound = ExtResource( 16 )
DoingGreatSound = ExtResource( 17 )
BeansedItSound = ExtResource( 18 )
[connection signal="note_failed" from="UI/Panel/NoteBars" to="." method="_on_NoteBars_note_failed"]
[connection signal="note_hit" from="UI/Panel/NoteBars" to="." method="_on_NoteBars_note_hit"]
[connection signal="pressed" from="UI/ResultPanel/VBoxContainer/BlaghButton" to="." method="_on_BlaghButton_pressed"]
[connection signal="timeout" from="GameLengthTimer" to="." method="_on_GameLengthTimer_timeout"]
